@@ -248,14 +248,29 @@
   </person>
   <!-- zh_CN translation coordinator -->
   <person id="x-wangjian">
-    <!-- FIXME: is Funda Wang (fwang) a new person? -->
     <name>Wang Jian</name>
     <email>lark@linux.net.cn</email>
+  </person>
+  <!-- Funda Wang is indeed another person, and is the de facto maintainer of zh_CN for years -->
+  <person id="fwang">
+    <name>Funda Wang</name>
+    <email>fundawang@gmail.com</email>
   </person>
   <!-- zh_HK translation coordinator -->
   <person id="baddog">
     <name>Abel Cheung</name>
+    <nick>abelcheung</nick>
     <email>abelcheung@gmail.com</email>
+    <email>abel@oaka.org</email>
+    <im id="Jabber">abelcheung@gmail.com</im>
+    <im id="ICQ">871219</im>
+    <webpage>http://me.abelcheung.org/</webpage>
+    <bugzilla-account>abelcheung@gmail.com</bugzilla-account>
+  </person>
+  <!-- will be picking up zh_HK/zh_TW work later -->
+  <person id="chliao">
+    <name>Chao-Hsiung Liao</name>
+    <email>pesder@gmail.com</email>
   </person>
   <!-- hr translation coordinator -->
   <person id="rsedak">
