@@ -2,6 +2,8 @@
 
 	* translation-teams.xml.in:
 	More info for traditional Chinese team.
+	* people.xml.in:
+	Add more about my info.
 
 2007-03-13  Claude Paroz  <claude@2xlibre.net>
 
